--- a/application/views/users/emails/applicationRejected.html
+++ b/application/views/users/emails/applicationRejected.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Application Status</title>
-</head>
-<body>
-	<img src="../images/headerlogo.png" style='width:100%;'><br>
-	Dear {$user->name},<br><br>
-	Your Application for <a href="{$url}">{$opportunity->title}</a> has not been selected for the current year. 
-	Apply next  time or you can apply to many other <a href="http://swiftintern.com/?utm_campaign=notify&utm_medium=email&utm_source=students">Internship</a> availabe on our sites. <br>
-	<br>
-	For more details about Opportunity please contact <a href="{$company_url}">{$company->name}</a><br>
-	For any Other Support/Query call/watsapp us at +91-9891048495 or reply to this email.
-	<br><br>
-	Regards,<br>
-	Swiftintern.com Team
-	<br><br>
-	We're on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
-</body>
-</html>
+<img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
+Dear {$user->name},<br><br>
+Your Application for <a href="http://swiftintern.com/{echo urlencode($opportunity->title)}/{echo $opportunity->id}">{$opportunity->title}</a> has not been selected for the current year. 
+Apply next  time or you can apply to many other <a href="http://swiftintern.com/?utm_campaign=notify&utm_medium=email&utm_source=students">Internship</a> availabe on our sites. <br>
+<br>
+For more details about Opportunity please contact <a href="https://www.linkedin.com/company/{echo $organization->linkedin_id}">{$organization->name}</a> on linkedin<br>
+For any Other Support/Query call/watsapp us at +91-9891048495 or reply to this email.
+<br><br>
+Regards,<br>
+Saud Akhtar
+CMO at Swiftintern.com
+<br><br>
+We're on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
