--- a/application/views/users/emails/applicationSelected.html
+++ b/application/views/users/emails/applicationSelected.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Application Status</title>
-</head>
-<body>
-	<img src="../images/headerlogo.png" style='width:100%;'><br>
-	Dear {$user->name},<br><br>
-	I am glad to inform you that you have been {$application->status} for <a href="{$url}">{$opportunity->title}</a>. <b>Congratulation's</b><br>
-	<br>
-	For more details about Opportunity please contact <a href="{$company_url}">{$company->name}</a><br>
-	For any Other Support/Query call/watsapp us at +91-9891048495 or reply to this email.
-	<br><br>
-	Regards,<br>
-	Swiftintern.com Team
-	<br><br>
-	We're on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
-</body>
-</html>
+<img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
+Dear {$user->name},<br><br>
+I am glad to inform you that you have been selected for <a href="http://swiftintern.com/{echo urlencode($opportunity->title)}/{echo $opportunity->id}">{$opportunity->title}</a>. <b>Congratulation's</b><br>
+<br>
+<a href="https://www.linkedin.com/company/{echo $organization->linkedin_id}">{$organization->name}</a> will contact you with further details in 2-3 buisness days.<br>
+For any Other Support/Query call/watsapp us at +91-9891048495 or reply to this email.
+<br><br>
+Regards,<br>
+Saud Akhtar
+CMO at Swiftintern.com
+<br><br>
+We're on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
