--- a/application/views/users/emails/newsletter.html
+++ b/application/views/users/emails/newsletter.html
@@ -1,3 +1,7 @@
+{if(isset($track))}
+    <img src="http://swiftintern.com/users/track/newsletter/{echo $newsletter->id}">
+    <img src="http://www.google-analytics.com/collect?v=1&tid=UA-49272936-3&cid=1&t=event&ec=email&ea=open&el=1&cs={echo $newsletter->user_group}&cm=email&cn=newsletter&cm1=1">
+{/if}
 <img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
 <br>
 {$message->body}
