--- a/application/views/students/index.html
+++ b/application/views/students/index.html
@@ -1,3 +1,4 @@
+{include layouts/modal/qualification.html}
 <section class="container">
     <div class="row">
 
@@ -40,17 +41,6 @@
 
             </div>
 
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <i class="fa fa-bullhorn"></i> Sponsored
-                    <div class="btn-group pull-right">
-                        <button onclick="loadSponsored(--page, '1');" class="btn btn-default btn-xs"><i class="fa fa-chevron-left"></i></button>
-                        <button onclick="loadSponsored(++page, '1');" class="btn btn-default btn-xs"><i class="fa fa-chevron-right"></i></button>
-                    </div>
-                </div>
-                <div class="panel-body" id="sponsored"></div>
-            </div>
-
         </div>
 
         <div class="col-xs-12 col-md-9">
@@ -73,7 +63,7 @@
                 <div class="panel-heading">
                     Education Details
                     <div class="pull-right">
-                        <a href="students/qualification" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</a>
+                        <button data-toggle="modal" data-target="#modal_qualification" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</button>
                     </div>
                 </div>
                 <table class="table">
