--- a/application/views/layouts/modal/work.html
+++ b/application/views/layouts/modal/work.html
@@ -5,34 +5,32 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h3 class="modal-title">Experience Details <small>(small work even working in college fest counts)</small></h3>
             </div>
-            <div class="modal-body">
-                <div id="more_work">
-                    <div class="row">
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-group">
-                                <label for=""><i class="fa fa-bank"></i> Company/Organization Name</label>
-                                <input type="text" name="name[]" class="form-control" required="" placeholder="start typing..." autocomplete="off">
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-group">
-                                <label for=""><i class="fa fa-calendar"></i> Duration</label>
-                                <input type="text" name="duration[]" class="form-control" required="" placeholder="eg. May 2014 to July 2014">
-                            </div>
+            <div class="modal-body" id="more_work">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                        <div class="form-group">
+                            <label for=""><i class="fa fa-bank"></i> Company/Organization Name</label>
+                            <input type="text" name="name[]" class="form-control" required="" placeholder="start typing..." autocomplete="off">
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-group">
-                                <label for=""><i class="fa fa-line-chart"></i> Responsibility</label>
-                                <textarea name="responsibility[]" class="form-control" placeholder="explain what work you did."></textarea>
-                            </div>
+                    <div class="col-xs-12 col-md-6">
+                        <div class="form-group">
+                            <label for=""><i class="fa fa-calendar"></i> Duration</label>
+                            <input type="text" name="duration[]" class="form-control" required="" placeholder="eg. May 2014 to July 2014">
                         </div>
-                        <div class="col-xs-12 col-md-6">
-                            <div class="form-group">
-                                <label for=""><i class="fa fa-certificate"></i> Designation</label>
-                                <input type="text" name="designation[]" class="form-control" required="" placeholder="eg. Intern, Sales Executive, etc">
-                            </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                        <div class="form-group">
+                            <label for=""><i class="fa fa-line-chart"></i> Responsibility</label>
+                            <textarea name="responsibility[]" class="form-control" placeholder="explain what work you did."></textarea>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <div class="form-group">
+                            <label for=""><i class="fa fa-certificate"></i> Designation</label>
+                            <input type="text" name="designation[]" class="form-control" required="" placeholder="eg. Intern, Sales Executive, etc">
                         </div>
                     </div>
                 </div>
