--- a/application/views/layouts/modal/qualification.html
+++ b/application/views/layouts/modal/qualification.html
@@ -5,36 +5,38 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h3 class="modal-title">Education Details</h3>
             </div>
-            <div class="modal-body" id="more_edu">
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <div class="form-group">
-                            <label for=""><i class="fa fa-bank"></i> College/University/School</label>
-                            <input type="text" name="name[]" class="form-control" required="" placeholder="start typing full name..." autocomplete="off">
+            <div class="modal-body">
+                <div id="more_edu">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-6">
+                            <div class="form-group">
+                                <label for=""><i class="fa fa-bank"></i> College/University/School</label>
+                                <input type="text" name="name[]" class="form-control" required="" placeholder="start typing full name..." autocomplete="off">
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-6">
+                            <div class="form-group">
+                                <label for=""><i class="fa fa-graduation-cap"></i> Qualification/Degree</label>
+                                <input type="text" name="degree[]" class="form-control" required="" placeholder="eg. B.Tech, Intermediate, 10th" autocomplete="off">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-md-6">
-                        <div class="form-group">
-                            <label for=""><i class="fa fa-graduation-cap"></i> Qualification/Degree</label>
-                            <input type="text" name="degree[]" class="form-control" required="" placeholder="eg. B.Tech, Intermediate, 10th" autocomplete="off">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-6">
+                            <div class="form-group">
+                                <label for=""><i class="fa fa-bookmark"></i> Major</label>
+                                <input type="text" name="major[]" class="form-control" required="" placeholder="eg. Economics, Civil Engineering etc" autocomplete="off">
+                            </div>
+                            <div class="form-group">
+                                <label for=""><i class="fa fa-certificate"></i> Percentage or GPA<small>(till now for current)</small></label>
+                                <input type="tel" name="gpa[]" class="form-control" placeholder="eg. 8.2, 73%, etc">
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <div class="form-group">
-                            <label for=""><i class="fa fa-bookmark"></i> Major</label>
-                            <input type="text" name="major[]" class="form-control" required="" placeholder="eg. Economics, Civil Engineering etc" autocomplete="off">
-                        </div>
-                        <div class="form-group">
-                            <label for=""><i class="fa fa-certificate"></i> Percentage or GPA<small>(till now for current)</small></label>
-                            <input type="tel" name="gpa[]" class="form-control" placeholder="eg. 8.2, 73%, etc">
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <div class="form-group">
-                            <label for=""><i class="fa fa-calendar"></i> Passing Year</label>
-                            <input type="tel" name="passing_year[]" class="form-control" required="" placeholder="eg. 2016">
+                        <div class="col-xs-12 col-md-6">
+                            <div class="form-group">
+                                <label for=""><i class="fa fa-calendar"></i> Passing Year</label>
+                                <input type="tel" name="passing_year[]" class="form-control" required="" placeholder="eg. 2016">
+                            </div>
                         </div>
                     </div>
                 </div>
