--- a/application/views/students/applications.html
+++ b/application/views/students/applications.html
@@ -1,9 +1,10 @@
 <section class="container">
     <div class="row">
+        <h1 class="page-header text-center">Applications</h1>
         <ol class="breadcrumb">
-            <li><a href="home">Home</a></li>
-            <li><a href="student">Profile</a></li>
-            <li class="active">Messages</li>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/students">Profile</a></li>
+            <li class="active">Applications</li>
         </ol>
         <div class="panel panel-default">
             <div class="panel-heading">
