--- a/application/views/students/index.html
+++ b/application/views/students/index.html
@@ -54,7 +54,7 @@
                 <div class="panel-heading">
                     Objective
                     <div class="pull-right">
-                        <button type="button" name="addmore" value="qualification" class="btn btn-info btn-xs"><i class="fa fa-edit fa-fw"></i> Add/Edit</button>
+                        <a href="/students/settings" class="btn btn-info btn-xs"><i class="fa fa-edit fa-fw"></i> Add/Edit</a>
                     </div>
                 </div>
                 <div class="panel-body">
@@ -104,7 +104,7 @@
                 <div class="panel-heading">
                     Experience
                     <div class="pull-right">
-                        <a href="students/work" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</a>
+                        <button data-toggle="modal" data-target="#modal_work" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</button>
                     </div>
                 </div>
                 <table class="table">
@@ -142,7 +142,7 @@
                 <div class="panel-heading">
                     Skills
                     <div class="pull-right">
-                        <button type="button" name="addmore" value="qualification" class="btn btn-info btn-xs"><i class="fa fa-edit fa-fw"></i> Add/Edit</button>
+                        <a href="/students/settings" class="btn btn-info btn-xs"><i class="fa fa-edit fa-fw"></i> Add/Edit</a>
                     </div>
                 </div>
                 <div class="panel-body">
@@ -152,7 +152,7 @@
                 <div class="panel-heading">
                     Links
                     <div class="pull-right">
-                        <button type="button" name="addmore" value="qualification" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</button>
+                        <a href="/students/settings" class="btn btn-info btn-xs"><i class="fa fa-plus-square fa-fw"></i> Add More</a>
                     </div>
                 </div>
                 <table class="table">
