--- a/application/views/students/messages.html
+++ b/application/views/students/messages.html
@@ -1,8 +1,9 @@
 <section class="container">
     <div class="row">
+        <h1 class="page-header text-center">Messages</h1>
         <ol class="breadcrumb">
             <li><a href="/home">Home</a></li>
-            <li><a href="/students/profile">Profile</a></li>
+            <li><a href="/students">Profile</a></li>
             <li class="active">Messages</li>
         </ol>
         <div class="col-lg-12">
