--- a/application/views/students/qualification.html
+++ b/application/views/students/qualification.html
@@ -6,7 +6,12 @@
             <li><a href="/students">Profile</a></li>
             <li class="active">qualification</li>
         </ol>
-
+        {if isset($success)}
+        <div class="alert alert-success alert-dismissible fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+            Qualification Saved <strong>Successfully!</strong>
+        </div>
+        {/if}
         <div class="col-md-offset-2 col-lg-8">
             <form class="form-horizontal" method="post" action="/students/qualification/{echo $qualification->id}">
                 <div class="form-group">
