Updated Student Controller and View

--- a/application/views/students/index.html
+++ b/application/views/students/index.html
@@ -46,7 +46,8 @@
                     </div>
                 </div>
                 <div class="panel-body">
-                    Completing this is very important to making a good impression with employers. 
+                    {echo $student->about}
+                    <small class="help-block">Completing this is very important to making a good impression with employers.</small>
                 </div>
 
                 <div class="panel-heading">
