--- a/application/views/students/settings.html
+++ b/application/views/students/settings.html
@@ -6,7 +6,12 @@
             <li><a href="/students">Profile</a></li>
             <li class="active">Settings</li>
         </ol>
-
+        {if isset($success)}
+        <div class="alert alert-success alert-dismissible fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+            Saved <strong>Successfully!</strong>
+        </div>
+        {/if}
         <div class="col-md-offset-2 col-lg-8">
             <legend id="basic">Basic Details</legend>
             <form class="form-horizontal panel panel-default panel-body" method="post" action="/students/settings">
