Fixed Test Details Link

--- a/application/views/onlinetest/index.html
+++ b/application/views/onlinetest/index.html
@@ -32,7 +32,7 @@
                                         <div class="caption">
                                             <p><b>{echo substr($exam->title, 0, 21)}</b></p>
                                             <p>
-                                                <a href="test-details/{echo urlencode($exam->title)}/{echo $exam->id}" class="btn btn-primary">Details</a> 
+                                                <a href="onlinetest/details/{echo urlencode($exam->title)}/{echo $exam->id}" class="btn btn-primary">Details</a> 
                                                 <a href="test/{echo urlencode($exam->title)}/{echo $exam->id}" class="btn btn-success" id="taketest">Start Test</a>
                                             </p>
                                         </div>
