Updated Message Model

--- a/application/views/students/messages.html
+++ b/application/views/students/messages.html
@@ -22,7 +22,7 @@
                     {foreach $conversation in $conversations}
                     <tr>
                         <td></td>
-                        <td></td>
+                        <td>{echo $conversation->created}</td>
                         <td></td>
                     </tr>
                     {/foreach}
